infra/k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sgm-web-staging-service
    namespace: sgm-staging
spec:
    selector:
        app: sgm-web-staging
    ports:
        - protocol: 'TCP'
          port: 80
          targetPort: 80 # nginx ecoute sur le port 80
    type: ClusterIP
